<resources>
    <string name="app_name">Tempo</string>
    <string name="try_again">Try again</string>
    <string name="playlists">Playlists</string>
    <string name="categories">Categories</string>
    <string name="no_playlists_available">No playlists available</string>
    <string name="search">Search</string>
    <string name="enter_search_term">Enter your search term</string>
    <string name="no_search_result">No search result</string>
    <string name="more">More</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="artist">Artist</string>
    <string name="genres">Genres</string>
    <string name="followers">Followers</string>
    <string name="not_available">N/A</string>
    <string name="related_artists">Related Artists</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="no_related_artists">No related artist(s)</string>
    <string name="no_album">No album(s)</string>
    <string name="openInSpotify">Open in Spotify</string>
    <string name="some_went_wrong">Something went wrong</string>
    <string name="spotify_not_installed">Spotify not installed</string>
    <string name="install_spotify">Install Spotify</string>
</resources>
