<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".artist.view.ArtistFragment">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/artistImageCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_normal"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/artistImageView"
                        android:layout_width="@dimen/width_image_view"
                        android:layout_height="@dimen/height_image_view"
                        android:src="@drawable/placeholder_category" />

                    <TextView
                        android:id="@+id/artistNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimary"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="@dimen/space_small"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        tools:text="Artist name" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contentContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_marginEnd="@dimen/space_normal"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artistImageCardView"
                app:layout_goneMarginEnd="@dimen/space_normal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/artistGenresLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:text="@string/genres"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/artistGenresTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistGenresLabelTextView"
                    tools:text="Black Metal\nEpic Black Metal\nSymphonic Black Metal\nShoegaze\nFolk Metal" />

                <TextView
                    android:id="@+id/noFollowersLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingTop="@dimen/space_normal"
                    android:text="@string/followers"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistGenresTextView" />

                <TextView
                    android:id="@+id/noFollowersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/noFollowersLabelTextView"
                    tools:text="120,333" />

                <TextView
                    android:id="@+id/artistTopTracksTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_normal"
                    android:text="@string/top_tracks"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/noFollowersTextView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artistTopTracksRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistTopTracksTextView" />

                <TextView
                    android:id="@+id/artistAlbumsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_normal"
                    android:text="@string/albums"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistTopTracksRecyclerView" />

                <FrameLayout
                    android:id="@+id/artistAlbumsFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistAlbumsTextView">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/artistAlbumsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/artistAlbumsTextView" />

                    <TextView
                        android:id="@+id/noArtistAlbumsTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/space_normal"
                        android:text="@string/no_album"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_normal"
                        android:visibility="gone" />

                </FrameLayout>

                <TextView
                    android:id="@+id/artistRelatedArtistsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_normal"
                    android:paddingBottom="@dimen/space_normal"
                    android:text="@string/related_artists"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistAlbumsFrameLayout" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/artistRelatedArtistsTextView">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/artistRelatedArtistsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/noRelatedArtistsTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/space_normal"
                        android:text="@string/no_related_artists"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_normal"
                        android:visibility="gone" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>